<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        app:cardBackgroundColor="@color/card_color"
        app:cardCornerRadius="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/card_edge">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/top_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/left_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/right_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="16dp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/basic_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/launches"
                app:layout_constraintStart_toStartOf="@+id/left_guideline"
                app:layout_constraintTop_toTopOf="@+id/top_guideline"
                tools:text="Launches"
                style="@style/launches_and_rocket_item_style" />


            <TextView
                android:id="@+id/mission_name"
                style="@style/mission_name_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/successful_launches"
                app:layout_constraintLeft_toLeftOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@+id/number" />


            <TextView
                android:id="@+id/total_text"
                style="@style/mission_name_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_launches"
                app:layout_constraintLeft_toLeftOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@+id/successful" />


            <TextView
                android:id="@+id/total"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@+id/right_guideline"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@+id/total_text"
                tools:text="143"
                style="@style/launches_total_total_style" />

            <TextView
                android:id="@+id/efficiency"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/toLaunch"
                app:layout_constraintEnd_toStartOf="@+id/right_guideline"
                app:layout_constraintStart_toEndOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@+id/total"
                tools:text="Revolutionizing space flight with an efficiency of 97% since 2006"
                style="@style/launches_total_efficiency_style" />


            <TextView
                android:id="@+id/successful"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@+id/right_guideline"
                app:layout_constraintStart_toEndOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@+id/mission_name"
                tools:text="138"
                style="@style/launches_total_successful_style" />

            <Button
                android:id="@+id/toLaunch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/right_guideline"
                app:layout_constraintStart_toStartOf="@+id/left_guideline"
                app:layout_constraintTop_toBottomOf="@+id/efficiency"
                style="@style/launches_total_tolaunch_style" />

            <TextView
                android:id="@+id/explore_launches"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Explore All Launches"
                app:layout_constraintBottom_toBottomOf="@+id/toLaunch"
                app:layout_constraintEnd_toStartOf="@+id/right_guideline"
                app:layout_constraintStart_toStartOf="@+id/left_guideline"
                app:layout_constraintTop_toTopOf="@+id/toLaunch"
                tools:text="Explore All Launches"
                style="@style/launches_total_all_launches" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>